--- a/config/config.json
+++ b/config/config.json
@@ -1,11 +1,7 @@
 {
-  "test": 123,
-  "ob": {
-    "bool": false,
-    "a": "a"
-  },
+  "test": "test",
   "nacos": {
-    "dataId": "cloudrendering-iray-agent-1",
+    "dataId": "test",
     "group": "DEFAULT_GROUP",
     "namespaceId": "",
     "serverConfigs": [
